# Louriest

./: .eslintrc.js  .gitignore  Procfile  README.md  index.js  jsdoc.conf.json  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirement.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.data/: token.txt
data/: block_words.txt
prisma/: schema.prisma
src/: deploy-commands.js  index.js  main.py
src/cogs/: louriestcog.py  maincog.py  systemcog.py
src/commands/dev/: dev.js
src/commands/fun/: cat.js  coin.js  dice.js
src/commands/mod/: addProhibitedWord.js  clear.js  listProhibitedWord.js  removeInfraction.js  removeProhibitedWord.js  resetInfraction.js
src/commands/utility/: ping.js  server.js  user.js
src/common/: banUser.js  checkBadWords.js  checkPermissions.js  checks.js  getRandom.js  handleBadWordEvent.js  logger.js  prohibitedWords.js  user.js
src/events/: interactionCreate.js  onMessage.js  ready.js
src/helper/: __init__.py  logger.py  modding.py  tools.py
src/louriest/: helper.py  main.py
src/louriest/cogs/: louriestcog.py  maincog.py  systemcog.py
src/louriest/helper/: logger.py  modding.py  tools.py
