[build-system]
requires = ["setuptools>=58.1.0", "discord", "google"]
build-backend = "setuptools.build_meta"

[project]
name = "louriest_discord"
description = "A personal discord bot"
readme = "README.md"
keywords = ["louriest"]
authors = [
    {name = "yashodhanketkar", email = "kykyashodhan@gmail.com"}
]
classifiers = [
    "Development Status :: 5",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache 2.0 License",
    "Operating System :: Windows NT system"
]
requires-python = ">=3.10, <4"

[tool.isort]
profile = "black"

[tool.black]
line-lenght = 88
target-version = ['py310']
extend-exclude = '''
    | .tox
    | data
'''
