[metadata]
name = louriest_discord
version= 2.2.0
description= A personal discord bot
long_description = file: README.md
long_description_conten_type = text/markdown
author = Yashodhan Ketkar
author_email = kykyashodhan@gmail.com
classifiers =
    Development Status :: 5
    Intended Audience :: Developers
    License :: OSI Approved :: Apache 2.0 License
    Programming Language :: Python :: 3.10
keywords = louriest

[options]
package_dir=
    = src

[options.packages.find]
where = src
